--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@clerk/themes": "^2.2.19",
+    "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -31,7 +32,7 @@
     "framer-motion": "^12.4.10",
     "inngest": "^3.31.11",
     "lucide-react": "^0.476.0",
-    "motion": "^12.4.10",
+    "motion": "^12.4.11",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
