--- a/package.json
+++ b/package.json
@@ -29,15 +29,17 @@
     "@tabler/icons-react": "^3.31.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.10",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.13",
     "inngest": "^3.31.11",
     "lucide-react": "^0.476.0",
-    "motion": "^12.4.11",
+    "motion": "^12.4.12",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.2",
