--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^2.2.19",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
+    "@mdxeditor/editor": "^3.27.0",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -27,13 +28,15 @@
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "@tabler/icons-react": "^3.31.0",
+    "@uiw/react-md-editor": "^4.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.13",
+    "html2pdf.js": "^0.10.3",
     "inngest": "^3.31.11",
     "lucide-react": "^0.476.0",
-    "motion": "^12.4.12",
+    "motion": "^12.5.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
